15.apr (ws)
      - switch off unused synthesizers (reducing cpu load)
      - enable edit mode for time signatures ("nudging")
14.apr (ws)
      - fix #10241: Inserted barline is missing
      - fix #10048: Opening Page Settings causes crash
      - fix #10247: Closing score after playback causes crash
      - fix #10244: EditTextStyles dlg does not keep "Size follows space unit"
        setting (patch from Miwarre)
      - fix #10245: Right-click Text Properties dlg box does not keep "Size follows
        space unit" setting (patch from Miwarre)
13.apr (ws)
      - fix crash when creating new score from template
      - new section break property: "start new section with long instrument names"
      - allow for different time signatures for every staff
12.apr (ws)
      - fix #2299: Bar line appears on every note of selected measure
      - fix layout of mid measure barlines
      - add "style" to note context menu (test for #2217)
      - implemented "small" attribute for accidentals
       (la)
      - don't print blue frame around selected image
11.apr (ws)
      - fix #7814:  error with single-line-staff percussion notation
      - fix #10050: Closing a score with part opened causes crash
      - fix #10062: Part with multiple instruments messes lyric position
      - fix #10109: Crash on loading 1.0 score with BOTH lyrics AND parts
      - fix #8996:  Not possible to change va value beyond bar in multi-voice
      - fix #10142: 'nudged' UserAccidental lost when loading with trunk (patch from Miwarre)
      - fix #10148: cannot drag between staves
      - fix #10156: Deleting from the third note onward in a beam causes crash
      - fix #10157: MyImages Directory button inactive
      - fix #10158: no icons for MySoundFonts/MyImagesDirectory
      - fix #10175: patch from Miwarre
      - another fix for #7740
      (la)
      - fix #7944: Instrument limit (again)
8.apr (ws)
      - fix #10105: Apple+Shift+Click on note causes crash